aula11/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Declarations Statements
Rule 2     Declarations -> Declarations Declaration
Rule 3     Declarations -> <empty>
Rule 4     Declaration -> Type IdList
Rule 5     Type -> INT
Rule 6     Type -> STR
Rule 7     IdList -> IdList , id
Rule 8     IdList -> id
Rule 9     Statements -> Statements Statement
Rule 10    Statements -> Statement
Rule 11    Statement -> id = Exp
Rule 12    Statement -> PRINT ( PrintArgs )
Rule 13    PrintArgs -> PrintArgs , PrintArg
Rule 14    PrintArgs -> PrintArg
Rule 15    PrintArg -> str
Rule 16    PrintArg -> Exp
Rule 17    Exp -> Exp + Term
Rule 18    Exp -> Exp - Term
Rule 19    Exp -> Term
Rule 20    Term -> Term * Factor
Rule 21    Term -> Term / Factor
Rule 22    Term -> Factor
Rule 23    Factor -> INT ( Exp )
Rule 24    Factor -> INPUT ( str )
Rule 25    Factor -> id
Rule 26    Factor -> num
Rule 27    Statement -> WHILE ( Cond ) CondStatements
Rule 28    Statement -> IF ( Cond ) CondStatements Else
Rule 29    Else -> <empty>
Rule 30    Else -> ELSE CondStatements
Rule 31    CondStatements -> Statement
Rule 32    CondStatements -> { Statements }
Rule 33    Cond -> Cond OR Cond2
Rule 34    Cond -> Cond2
Rule 35    Cond2 -> Cond2 AND Cond3
Rule 36    Cond2 -> Cond3
Rule 37    Cond3 -> NOT ExpRel
Rule 38    Cond3 -> ExpRel
Rule 39    Cond3 -> TRUE
Rule 40    Cond3 -> FALSE
Rule 41    ExpRel -> Exp > Exp
Rule 42    ExpRel -> Exp < Exp
Rule 43    ExpRel -> Exp GE Exp
Rule 44    ExpRel -> Exp LE Exp
Rule 45    ExpRel -> Exp EQ Exp
Rule 46    ExpRel -> Exp NEQ Exp

Terminals, with rules where they appear

(                    : 12 23 24 27 28
)                    : 12 23 24 27 28
*                    : 20
+                    : 17
,                    : 7 13
-                    : 18
/                    : 21
<                    : 42
=                    : 11
>                    : 41
AND                  : 35
COMMENT              : 
ELSE                 : 30
EQ                   : 45
FALSE                : 40
GE                   : 43
IF                   : 28
INPUT                : 24
INT                  : 5 23
LE                   : 44
NEQ                  : 46
NOT                  : 37
OR                   : 33
PRINT                : 12
STR                  : 6
TRUE                 : 39
WHILE                : 27
error                : 
id                   : 7 8 11 25
num                  : 26
str                  : 15 24
{                    : 32
}                    : 32

Nonterminals, with rules where they appear

Cond                 : 27 28 33
Cond2                : 33 34 35
Cond3                : 35 36
CondStatements       : 27 28 30
Declaration          : 2
Declarations         : 1 2
Else                 : 28
Exp                  : 11 16 17 18 23 41 41 42 42 43 43 44 44 45 45 46 46
ExpRel               : 37 38
Factor               : 20 21 22
IdList               : 4 7
PrintArg             : 13 14
PrintArgs            : 12 13
Program              : 0
Statement            : 9 10 31
Statements           : 1 9 32
Term                 : 17 18 19 20 21
Type                 : 4

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Declarations Statements
    (2) Declarations -> . Declarations Declaration
    (3) Declarations -> .

    id              reduce using rule 3 (Declarations -> .)
    PRINT           reduce using rule 3 (Declarations -> .)
    WHILE           reduce using rule 3 (Declarations -> .)
    IF              reduce using rule 3 (Declarations -> .)
    INT             reduce using rule 3 (Declarations -> .)
    STR             reduce using rule 3 (Declarations -> .)

    Program                        shift and go to state 1
    Declarations                   shift and go to state 2

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Declarations . Statements
    (2) Declarations -> Declarations . Declaration
    (9) Statements -> . Statements Statement
    (10) Statements -> . Statement
    (4) Declaration -> . Type IdList
    (11) Statement -> . id = Exp
    (12) Statement -> . PRINT ( PrintArgs )
    (27) Statement -> . WHILE ( Cond ) CondStatements
    (28) Statement -> . IF ( Cond ) CondStatements Else
    (5) Type -> . INT
    (6) Type -> . STR

    id              shift and go to state 7
    PRINT           shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10
    INT             shift and go to state 11
    STR             shift and go to state 12

    Statements                     shift and go to state 3
    Declaration                    shift and go to state 4
    Statement                      shift and go to state 5
    Type                           shift and go to state 6

state 3

    (1) Program -> Declarations Statements .
    (9) Statements -> Statements . Statement
    (11) Statement -> . id = Exp
    (12) Statement -> . PRINT ( PrintArgs )
    (27) Statement -> . WHILE ( Cond ) CondStatements
    (28) Statement -> . IF ( Cond ) CondStatements Else

    $end            reduce using rule 1 (Program -> Declarations Statements .)
    id              shift and go to state 7
    PRINT           shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10

    Statement                      shift and go to state 13

state 4

    (2) Declarations -> Declarations Declaration .

    id              reduce using rule 2 (Declarations -> Declarations Declaration .)
    PRINT           reduce using rule 2 (Declarations -> Declarations Declaration .)
    WHILE           reduce using rule 2 (Declarations -> Declarations Declaration .)
    IF              reduce using rule 2 (Declarations -> Declarations Declaration .)
    INT             reduce using rule 2 (Declarations -> Declarations Declaration .)
    STR             reduce using rule 2 (Declarations -> Declarations Declaration .)


state 5

    (10) Statements -> Statement .

    id              reduce using rule 10 (Statements -> Statement .)
    PRINT           reduce using rule 10 (Statements -> Statement .)
    WHILE           reduce using rule 10 (Statements -> Statement .)
    IF              reduce using rule 10 (Statements -> Statement .)
    $end            reduce using rule 10 (Statements -> Statement .)
    }               reduce using rule 10 (Statements -> Statement .)


state 6

    (4) Declaration -> Type . IdList
    (7) IdList -> . IdList , id
    (8) IdList -> . id

    id              shift and go to state 15

    IdList                         shift and go to state 14

state 7

    (11) Statement -> id . = Exp

    =               shift and go to state 16


state 8

    (12) Statement -> PRINT . ( PrintArgs )

    (               shift and go to state 17


state 9

    (27) Statement -> WHILE . ( Cond ) CondStatements

    (               shift and go to state 18


state 10

    (28) Statement -> IF . ( Cond ) CondStatements Else

    (               shift and go to state 19


state 11

    (5) Type -> INT .

    id              reduce using rule 5 (Type -> INT .)


state 12

    (6) Type -> STR .

    id              reduce using rule 6 (Type -> STR .)


state 13

    (9) Statements -> Statements Statement .

    id              reduce using rule 9 (Statements -> Statements Statement .)
    PRINT           reduce using rule 9 (Statements -> Statements Statement .)
    WHILE           reduce using rule 9 (Statements -> Statements Statement .)
    IF              reduce using rule 9 (Statements -> Statements Statement .)
    $end            reduce using rule 9 (Statements -> Statements Statement .)
    }               reduce using rule 9 (Statements -> Statements Statement .)


state 14

    (4) Declaration -> Type IdList .
    (7) IdList -> IdList . , id

    id              reduce using rule 4 (Declaration -> Type IdList .)
    PRINT           reduce using rule 4 (Declaration -> Type IdList .)
    WHILE           reduce using rule 4 (Declaration -> Type IdList .)
    IF              reduce using rule 4 (Declaration -> Type IdList .)
    INT             reduce using rule 4 (Declaration -> Type IdList .)
    STR             reduce using rule 4 (Declaration -> Type IdList .)
    ,               shift and go to state 20


state 15

    (8) IdList -> id .

    ,               reduce using rule 8 (IdList -> id .)
    id              reduce using rule 8 (IdList -> id .)
    PRINT           reduce using rule 8 (IdList -> id .)
    WHILE           reduce using rule 8 (IdList -> id .)
    IF              reduce using rule 8 (IdList -> id .)
    INT             reduce using rule 8 (IdList -> id .)
    STR             reduce using rule 8 (IdList -> id .)


state 16

    (11) Statement -> id = . Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Exp                            shift and go to state 22
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 17

    (12) Statement -> PRINT ( . PrintArgs )
    (13) PrintArgs -> . PrintArgs , PrintArg
    (14) PrintArgs -> . PrintArg
    (15) PrintArg -> . str
    (16) PrintArg -> . Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    str             shift and go to state 30
    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    PrintArgs                      shift and go to state 28
    PrintArg                       shift and go to state 29
    Exp                            shift and go to state 31
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 18

    (27) Statement -> WHILE ( . Cond ) CondStatements
    (33) Cond -> . Cond OR Cond2
    (34) Cond -> . Cond2
    (35) Cond2 -> . Cond2 AND Cond3
    (36) Cond2 -> . Cond3
    (37) Cond3 -> . NOT ExpRel
    (38) Cond3 -> . ExpRel
    (39) Cond3 -> . TRUE
    (40) Cond3 -> . FALSE
    (41) ExpRel -> . Exp > Exp
    (42) ExpRel -> . Exp < Exp
    (43) ExpRel -> . Exp GE Exp
    (44) ExpRel -> . Exp LE Exp
    (45) ExpRel -> . Exp EQ Exp
    (46) ExpRel -> . Exp NEQ Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    NOT             shift and go to state 35
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Cond                           shift and go to state 32
    Cond2                          shift and go to state 33
    Cond3                          shift and go to state 34
    ExpRel                         shift and go to state 36
    Exp                            shift and go to state 39
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 19

    (28) Statement -> IF ( . Cond ) CondStatements Else
    (33) Cond -> . Cond OR Cond2
    (34) Cond -> . Cond2
    (35) Cond2 -> . Cond2 AND Cond3
    (36) Cond2 -> . Cond3
    (37) Cond3 -> . NOT ExpRel
    (38) Cond3 -> . ExpRel
    (39) Cond3 -> . TRUE
    (40) Cond3 -> . FALSE
    (41) ExpRel -> . Exp > Exp
    (42) ExpRel -> . Exp < Exp
    (43) ExpRel -> . Exp GE Exp
    (44) ExpRel -> . Exp LE Exp
    (45) ExpRel -> . Exp EQ Exp
    (46) ExpRel -> . Exp NEQ Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    NOT             shift and go to state 35
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Cond                           shift and go to state 40
    Cond2                          shift and go to state 33
    Cond3                          shift and go to state 34
    ExpRel                         shift and go to state 36
    Exp                            shift and go to state 39
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 20

    (7) IdList -> IdList , . id

    id              shift and go to state 41


state 21

    (25) Factor -> id .

    *               reduce using rule 25 (Factor -> id .)
    /               reduce using rule 25 (Factor -> id .)
    +               reduce using rule 25 (Factor -> id .)
    -               reduce using rule 25 (Factor -> id .)
    id              reduce using rule 25 (Factor -> id .)
    PRINT           reduce using rule 25 (Factor -> id .)
    WHILE           reduce using rule 25 (Factor -> id .)
    IF              reduce using rule 25 (Factor -> id .)
    $end            reduce using rule 25 (Factor -> id .)
    ELSE            reduce using rule 25 (Factor -> id .)
    }               reduce using rule 25 (Factor -> id .)
    )               reduce using rule 25 (Factor -> id .)
    ,               reduce using rule 25 (Factor -> id .)
    >               reduce using rule 25 (Factor -> id .)
    <               reduce using rule 25 (Factor -> id .)
    GE              reduce using rule 25 (Factor -> id .)
    LE              reduce using rule 25 (Factor -> id .)
    EQ              reduce using rule 25 (Factor -> id .)
    NEQ             reduce using rule 25 (Factor -> id .)
    AND             reduce using rule 25 (Factor -> id .)
    OR              reduce using rule 25 (Factor -> id .)


state 22

    (11) Statement -> id = Exp .
    (17) Exp -> Exp . + Term
    (18) Exp -> Exp . - Term

    id              reduce using rule 11 (Statement -> id = Exp .)
    PRINT           reduce using rule 11 (Statement -> id = Exp .)
    WHILE           reduce using rule 11 (Statement -> id = Exp .)
    IF              reduce using rule 11 (Statement -> id = Exp .)
    $end            reduce using rule 11 (Statement -> id = Exp .)
    ELSE            reduce using rule 11 (Statement -> id = Exp .)
    }               reduce using rule 11 (Statement -> id = Exp .)
    +               shift and go to state 42
    -               shift and go to state 43


state 23

    (19) Exp -> Term .
    (20) Term -> Term . * Factor
    (21) Term -> Term . / Factor

    +               reduce using rule 19 (Exp -> Term .)
    -               reduce using rule 19 (Exp -> Term .)
    id              reduce using rule 19 (Exp -> Term .)
    PRINT           reduce using rule 19 (Exp -> Term .)
    WHILE           reduce using rule 19 (Exp -> Term .)
    IF              reduce using rule 19 (Exp -> Term .)
    $end            reduce using rule 19 (Exp -> Term .)
    ELSE            reduce using rule 19 (Exp -> Term .)
    }               reduce using rule 19 (Exp -> Term .)
    )               reduce using rule 19 (Exp -> Term .)
    ,               reduce using rule 19 (Exp -> Term .)
    >               reduce using rule 19 (Exp -> Term .)
    <               reduce using rule 19 (Exp -> Term .)
    GE              reduce using rule 19 (Exp -> Term .)
    LE              reduce using rule 19 (Exp -> Term .)
    EQ              reduce using rule 19 (Exp -> Term .)
    NEQ             reduce using rule 19 (Exp -> Term .)
    AND             reduce using rule 19 (Exp -> Term .)
    OR              reduce using rule 19 (Exp -> Term .)
    *               shift and go to state 44
    /               shift and go to state 45


state 24

    (22) Term -> Factor .

    *               reduce using rule 22 (Term -> Factor .)
    /               reduce using rule 22 (Term -> Factor .)
    +               reduce using rule 22 (Term -> Factor .)
    -               reduce using rule 22 (Term -> Factor .)
    id              reduce using rule 22 (Term -> Factor .)
    PRINT           reduce using rule 22 (Term -> Factor .)
    WHILE           reduce using rule 22 (Term -> Factor .)
    IF              reduce using rule 22 (Term -> Factor .)
    $end            reduce using rule 22 (Term -> Factor .)
    ELSE            reduce using rule 22 (Term -> Factor .)
    }               reduce using rule 22 (Term -> Factor .)
    )               reduce using rule 22 (Term -> Factor .)
    ,               reduce using rule 22 (Term -> Factor .)
    >               reduce using rule 22 (Term -> Factor .)
    <               reduce using rule 22 (Term -> Factor .)
    GE              reduce using rule 22 (Term -> Factor .)
    LE              reduce using rule 22 (Term -> Factor .)
    EQ              reduce using rule 22 (Term -> Factor .)
    NEQ             reduce using rule 22 (Term -> Factor .)
    AND             reduce using rule 22 (Term -> Factor .)
    OR              reduce using rule 22 (Term -> Factor .)


state 25

    (23) Factor -> INT . ( Exp )

    (               shift and go to state 46


state 26

    (24) Factor -> INPUT . ( str )

    (               shift and go to state 47


state 27

    (26) Factor -> num .

    *               reduce using rule 26 (Factor -> num .)
    /               reduce using rule 26 (Factor -> num .)
    +               reduce using rule 26 (Factor -> num .)
    -               reduce using rule 26 (Factor -> num .)
    id              reduce using rule 26 (Factor -> num .)
    PRINT           reduce using rule 26 (Factor -> num .)
    WHILE           reduce using rule 26 (Factor -> num .)
    IF              reduce using rule 26 (Factor -> num .)
    $end            reduce using rule 26 (Factor -> num .)
    ELSE            reduce using rule 26 (Factor -> num .)
    }               reduce using rule 26 (Factor -> num .)
    )               reduce using rule 26 (Factor -> num .)
    ,               reduce using rule 26 (Factor -> num .)
    >               reduce using rule 26 (Factor -> num .)
    <               reduce using rule 26 (Factor -> num .)
    GE              reduce using rule 26 (Factor -> num .)
    LE              reduce using rule 26 (Factor -> num .)
    EQ              reduce using rule 26 (Factor -> num .)
    NEQ             reduce using rule 26 (Factor -> num .)
    AND             reduce using rule 26 (Factor -> num .)
    OR              reduce using rule 26 (Factor -> num .)


state 28

    (12) Statement -> PRINT ( PrintArgs . )
    (13) PrintArgs -> PrintArgs . , PrintArg

    )               shift and go to state 48
    ,               shift and go to state 49


state 29

    (14) PrintArgs -> PrintArg .

    )               reduce using rule 14 (PrintArgs -> PrintArg .)
    ,               reduce using rule 14 (PrintArgs -> PrintArg .)


state 30

    (15) PrintArg -> str .

    )               reduce using rule 15 (PrintArg -> str .)
    ,               reduce using rule 15 (PrintArg -> str .)


state 31

    (16) PrintArg -> Exp .
    (17) Exp -> Exp . + Term
    (18) Exp -> Exp . - Term

    )               reduce using rule 16 (PrintArg -> Exp .)
    ,               reduce using rule 16 (PrintArg -> Exp .)
    +               shift and go to state 42
    -               shift and go to state 43


state 32

    (27) Statement -> WHILE ( Cond . ) CondStatements
    (33) Cond -> Cond . OR Cond2

    )               shift and go to state 50
    OR              shift and go to state 51


state 33

    (34) Cond -> Cond2 .
    (35) Cond2 -> Cond2 . AND Cond3

    )               reduce using rule 34 (Cond -> Cond2 .)
    OR              reduce using rule 34 (Cond -> Cond2 .)
    AND             shift and go to state 52


state 34

    (36) Cond2 -> Cond3 .

    AND             reduce using rule 36 (Cond2 -> Cond3 .)
    )               reduce using rule 36 (Cond2 -> Cond3 .)
    OR              reduce using rule 36 (Cond2 -> Cond3 .)


state 35

    (37) Cond3 -> NOT . ExpRel
    (41) ExpRel -> . Exp > Exp
    (42) ExpRel -> . Exp < Exp
    (43) ExpRel -> . Exp GE Exp
    (44) ExpRel -> . Exp LE Exp
    (45) ExpRel -> . Exp EQ Exp
    (46) ExpRel -> . Exp NEQ Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    ExpRel                         shift and go to state 53
    Exp                            shift and go to state 39
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 36

    (38) Cond3 -> ExpRel .

    AND             reduce using rule 38 (Cond3 -> ExpRel .)
    )               reduce using rule 38 (Cond3 -> ExpRel .)
    OR              reduce using rule 38 (Cond3 -> ExpRel .)


state 37

    (39) Cond3 -> TRUE .

    AND             reduce using rule 39 (Cond3 -> TRUE .)
    )               reduce using rule 39 (Cond3 -> TRUE .)
    OR              reduce using rule 39 (Cond3 -> TRUE .)


state 38

    (40) Cond3 -> FALSE .

    AND             reduce using rule 40 (Cond3 -> FALSE .)
    )               reduce using rule 40 (Cond3 -> FALSE .)
    OR              reduce using rule 40 (Cond3 -> FALSE .)


state 39

    (41) ExpRel -> Exp . > Exp
    (42) ExpRel -> Exp . < Exp
    (43) ExpRel -> Exp . GE Exp
    (44) ExpRel -> Exp . LE Exp
    (45) ExpRel -> Exp . EQ Exp
    (46) ExpRel -> Exp . NEQ Exp
    (17) Exp -> Exp . + Term
    (18) Exp -> Exp . - Term

    >               shift and go to state 54
    <               shift and go to state 55
    GE              shift and go to state 56
    LE              shift and go to state 57
    EQ              shift and go to state 58
    NEQ             shift and go to state 59
    +               shift and go to state 42
    -               shift and go to state 43


state 40

    (28) Statement -> IF ( Cond . ) CondStatements Else
    (33) Cond -> Cond . OR Cond2

    )               shift and go to state 60
    OR              shift and go to state 51


state 41

    (7) IdList -> IdList , id .

    ,               reduce using rule 7 (IdList -> IdList , id .)
    id              reduce using rule 7 (IdList -> IdList , id .)
    PRINT           reduce using rule 7 (IdList -> IdList , id .)
    WHILE           reduce using rule 7 (IdList -> IdList , id .)
    IF              reduce using rule 7 (IdList -> IdList , id .)
    INT             reduce using rule 7 (IdList -> IdList , id .)
    STR             reduce using rule 7 (IdList -> IdList , id .)


state 42

    (17) Exp -> Exp + . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Term                           shift and go to state 61
    Factor                         shift and go to state 24

state 43

    (18) Exp -> Exp - . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Term                           shift and go to state 62
    Factor                         shift and go to state 24

state 44

    (20) Term -> Term * . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Factor                         shift and go to state 63

state 45

    (21) Term -> Term / . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Factor                         shift and go to state 64

state 46

    (23) Factor -> INT ( . Exp )
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Exp                            shift and go to state 65
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 47

    (24) Factor -> INPUT ( . str )

    str             shift and go to state 66


state 48

    (12) Statement -> PRINT ( PrintArgs ) .

    id              reduce using rule 12 (Statement -> PRINT ( PrintArgs ) .)
    PRINT           reduce using rule 12 (Statement -> PRINT ( PrintArgs ) .)
    WHILE           reduce using rule 12 (Statement -> PRINT ( PrintArgs ) .)
    IF              reduce using rule 12 (Statement -> PRINT ( PrintArgs ) .)
    $end            reduce using rule 12 (Statement -> PRINT ( PrintArgs ) .)
    ELSE            reduce using rule 12 (Statement -> PRINT ( PrintArgs ) .)
    }               reduce using rule 12 (Statement -> PRINT ( PrintArgs ) .)


state 49

    (13) PrintArgs -> PrintArgs , . PrintArg
    (15) PrintArg -> . str
    (16) PrintArg -> . Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    str             shift and go to state 30
    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    PrintArg                       shift and go to state 67
    Exp                            shift and go to state 31
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 50

    (27) Statement -> WHILE ( Cond ) . CondStatements
    (31) CondStatements -> . Statement
    (32) CondStatements -> . { Statements }
    (11) Statement -> . id = Exp
    (12) Statement -> . PRINT ( PrintArgs )
    (27) Statement -> . WHILE ( Cond ) CondStatements
    (28) Statement -> . IF ( Cond ) CondStatements Else

    {               shift and go to state 70
    id              shift and go to state 7
    PRINT           shift and go to state 8
    WHILE           shift and go to state 9
    IF              shift and go to state 10

    CondStatements                 shift and go to state 68
    Statement                      shift and go to state 69

state 51

    (33) Cond -> Cond OR . Cond2
    (35) Cond2 -> . Cond2 AND Cond3
    (36) Cond2 -> . Cond3
    (37) Cond3 -> . NOT ExpRel
    (38) Cond3 -> . ExpRel
    (39) Cond3 -> . TRUE
    (40) Cond3 -> . FALSE
    (41) ExpRel -> . Exp > Exp
    (42) ExpRel -> . Exp < Exp
    (43) ExpRel -> . Exp GE Exp
    (44) ExpRel -> . Exp LE Exp
    (45) ExpRel -> . Exp EQ Exp
    (46) ExpRel -> . Exp NEQ Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    NOT             shift and go to state 35
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

    Cond2                          shift and go to state 71
    Cond3                          shift and go to state 34
    ExpRel                         shift and go to state 36
    Exp                            shift and go to state 39
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 52

    (35) Cond2 -> Cond2 AND . Cond3
    (37) Cond3 -> . NOT ExpRel
    (38) Cond3 -> . ExpRel
    (39) Cond3 -> . TRUE
    (40) Cond3 -> . FALSE
    (41) ExpRel -> . Exp > Exp
    (42) ExpRel -> . Exp < Exp
    (43) ExpRel -> . Exp GE Exp
    (44) ExpRel -> . Exp LE Exp
    (45) ExpRel -> . Exp EQ Exp
    (46) ExpRel -> . Exp NEQ Exp
    (17) Exp -> . Exp + Term
    (18) Exp -> . Exp - Term
    (19) Exp -> . Term
    (20) Term -> . Term * Factor
    (21) Term -> . Term / Factor
    (22) Term -> . Factor
    (23) Factor -> . INT ( Exp )
    (24) Factor -> . INPUT ( str )
    (25) Factor -> . id
    (26) Factor -> . num

    NOT             shift and go to state 35
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    INT             shift and go to state 25
    INPUT           shift and go to state 26
    id              shift and go to state 21
    num             shift and go to state 27

